--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,6 @@
 .planner-page {
   height: 100vh;
+  background-color: black;
   .current-plan {
     background-color: #bc1e4a;
     width: 18rem;
@@ -19,14 +20,14 @@
   }
   .cards-container {
     color: white;
-    text-align: center;
     padding: 15px;
     position: absolute;
     top: 19%;
     left: 3%;
     width: 95vw;
     h3 {
-      font-size: 25px;
+      font-size: 20px;
+      text-align: center;
     }
 
     .toggle-plan {
@@ -87,31 +88,89 @@
   .price-cards {
     display: flex;
     justify-content: space-around;
-    width: 75%;
+    width: 85%;
     margin: 10px auto 0 auto;
     flex-wrap: wrap;
     .price-card {
       background-color: #22262c;
       padding: 15px 0;
       height: 400px;
-      width: 300px;
+      width: 320px;
       margin: 10px;
       border-radius: 8px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
       .price-card-header {
         padding: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
         h3 {
           font-size: large;
           font-weight: lighter;
           margin-bottom: 15px;
         }
         p {
+          text-align: center;
           font-size: 35px;
           font-weight: 500;
           .subscript-tags {
             font-size: medium;
           }
         }
+        .select-package {
+          margin: 20px 0 0 30px;
+          border: 2px solid #2c3036;
+          width: 80%;
+          height: 43px;
+          background-color: #22262c;
+          color: #6f7276;
+          padding-left: 20px;
+        }
+      }
+      #select-tag {
+        font-size: smaller;
+        font-weight: 400;
+        color: #6c213a;
+        padding-left: 50px;
       }
     }
+  }
+
+  .list-features {
+    margin-bottom: 20px;
+    padding-left: 10px;
+    ul {
+      list-style-type: disc;
+      padding: 0;
+    }
+
+    li {
+      margin-left: 55px;
+      padding: 8px 0 0 10px;
+      color: #797b7f;
+    }
+
+    li::marker {
+      color: #a81f45;
+    }
+  }
+  .card-footer {
+    text-align: center;
+  }
+  button {
+    border: 2px solid #bc1e4a;
+    margin: 20px;
+    width: 150px;
+    margin: 10px auto 0 auto;
+    padding: 10px;
+    color: white;
+    border-radius: 5px;
+    background-color: #22262c;
+  }
+
+  button:hover {
+    background-color: #bc1e4a;
   }
 }
