--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -135,6 +135,9 @@
         padding-left: 50px;
       }
     }
+    .price-card:hover {
+      border: 2px solid #bc1e41;
+    }
   }
 
   .list-features {
