:lipsick:fix:UI fixes on price cards.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,7 +47,7 @@
             <li *ngFor="let feature of card.features">{{ feature }}</li>
           </ul>
           <div class="card-footer">
-            <button>Choose Plan</button>
+            <button>{{ card.buttonData }}</button>
           </div>
         </div>
       </div>
