--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -24,9 +24,10 @@
   .cards-container {
     color: white;
     padding: 1px;
+    margin-bottom: 60px;
     width: 100%;
     h3 {
-      font-size: 18px;
+      font-size: 20px;
       text-align: center;
     }
 
@@ -37,7 +38,7 @@
         align-items: center;
         margin-top: 10px;
         p {
-          font-size: smaller;
+          font-size: medium;
           margin: 5px;
         }
         .switch {
@@ -88,13 +89,14 @@
   .price-cards {
     display: flex;
     justify-content: space-around;
-    width: 89%;
+    width: 83%;
     margin: 10px auto 0 auto;
     flex-wrap: wrap;
     .price-card {
       background-color: #22262c;
-      padding: 10px 0;
-      width: 300px;
+      padding: 20px 0;
+      width: 340px;
+      min-height: 430px;
       margin: 2px auto 2px auto;
       border-radius: 8px;
       display: flex;
